k8s/webapp/web-app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: web-app
    namespace: hopper
    labels:
        app: web-app
    
spec:
    replicas: 1
    selector:
        matchLabels:
            app: web-app
    template:
        metadata:
            labels:
                app: web-app
        spec:
            containers:
                - name: web-app-service
                  image: bootcamp-starter-kit_webapp:latest
                  imagePullPolicy: Never
                  ports:
                     - containerPort: 8000
