k8s/webapp/web-app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: web-app-service
    name: web-app-service
    namespace: hopper
spec:
    ports:
        - name: web-app
          port: 80
          targetPort: 8000
    selector:
        app: web-app
    type: NodePort
